[gd_scene load_steps=8 format=3 uid="uid://cvl4g55wh1pph"]

[ext_resource type="Script" uid="uid://cucbtcx5r56qj" path="res://enemy/svraka/svraka_enemy.gd" id="1_hv0ny"]
[ext_resource type="PackedScene" uid="uid://du25de5l7gbb8" path="res://enemy/svraka/svraka_rig.tscn" id="2_hv0ny"]
[ext_resource type="PackedScene" uid="uid://ckm2xgcy2faek" path="res://enemy/svraka/svraka_revolver.tscn" id="3_uslka"]
[ext_resource type="Script" uid="uid://b85t121ntvk8q" path="res://enemy/svraka/svraka_crystals.gd" id="4_hv0ny"]
[ext_resource type="PackedScene" uid="uid://b2t5x1h0uvjb4" path="res://watch/crystal.tscn" id="5_08fur"]
[ext_resource type="Script" uid="uid://bgcqn6tjnhu6h" path="res://addons/LineRenderer/line_renderer.gd" id="5_uslka"]

[sub_resource type="ImmediateMesh" id="ImmediateMesh_uslka"]

[node name="SvrakaEnemy" type="Node3D" node_paths=PackedStringArray("animation_player", "revolver", "queue_line_renderer")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("1_hv0ny")
animation_player = NodePath("rig/SvrakaAnimationPlayer")
revolver = NodePath("rig/Skeleton3D/BeakAttachment/SvrakaRevolver")
queue_line_renderer = NodePath("ShotQueueLineRenderer")

[node name="rig" parent="." instance=ExtResource("2_hv0ny")]

[node name="Skeleton3D" parent="rig" index="0"]
bones/0/position = Vector3(-1.57772e-31, -0.146641, 0)
bones/1/position = Vector3(0, 0.645811, 1.21)
bones/1/rotation = Quaternion(0.996618, 0, 0, 0.0821683)
bones/2/rotation = Quaternion(-0.0658788, 0, 0, 0.997828)
bones/3/rotation = Quaternion(-0.225054, 0, 0, 0.974346)
bones/4/rotation = Quaternion(-0.13007, 0, 0, 0.991505)
bones/4/scale = Vector3(1, 1, 1)
bones/5/rotation = Quaternion(-0.0454699, 4.99483e-05, -2.2735e-06, 0.998966)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(-0.060446, 1.70934e-11, -6.04459e-06, 0.998172)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(0.206446, -4.89228e-05, 1.03223e-05, 0.978458)
bones/7/scale = Vector3(1, 1, 1)
bones/8/position = Vector3(0.213361, 0.204771, 0.559895)
bones/8/rotation = Quaternion(8.21733e-06, 0.999351, -0.0360192, -0.000228205)
bones/8/scale = Vector3(1, 19.5026, 1)
bones/9/position = Vector3(-0.213361, 0.204771, 0.559895)
bones/9/rotation = Quaternion(8.21733e-06, 0.999351, -0.0360192, -0.000228205)
bones/9/scale = Vector3(1, 19.5026, 1)
bones/10/position = Vector3(-1.57772e-31, 1.09415, -0.460373)
bones/11/position = Vector3(0, 2.98023e-08, 0)
bones/11/rotation = Quaternion(0, 0, 0, 1)
bones/13/rotation = Quaternion(0, 0, 0, 1)
bones/18/rotation = Quaternion(0.996619, 0, 0, -0.0821688)
bones/19/rotation = Quaternion(0.0569123, 0, 0, 0.998379)
bones/20/rotation = Quaternion(-0.00921513, 0, 0, 0.999958)
bones/21/rotation = Quaternion(-0.0528395, 0, 0, 0.998603)
bones/23/rotation = Quaternion(1, -3.7862e-14, -4.37114e-08, 8.62405e-07)
bones/25/rotation = Quaternion(1, 3.76314e-15, -4.37114e-08, -1.5297e-07)
bones/26/rotation = Quaternion(0.992344, 0.123489, 0.00168922, -3.14236e-05)
bones/28/rotation = Quaternion(0.992344, -0.123489, -0.00168939, -3.14238e-05)
bones/30/rotation = Quaternion(0.992344, 0.123489, 0.00168922, -3.14236e-05)
bones/31/rotation = Quaternion(0.992344, -0.123489, -0.00168939, -3.14238e-05)
bones/33/rotation = Quaternion(0.0528387, 1.60982e-15, -4.6193e-09, 0.998603)
bones/34/rotation = Quaternion(0.00921503, 2.5405e-15, -8.0559e-10, 0.999958)
bones/36/rotation = Quaternion(1, -4.56276e-14, -4.37114e-08, 7.3202e-07)
bones/37/rotation = Quaternion(0.990327, 0, 0, -0.138755)
bones/39/rotation = Quaternion(0, 0, 0, 1)
bones/41/rotation = Quaternion(0.0658786, 0, 0, 0.997828)
bones/46/rotation = Quaternion(-0.587664, 0.759875, 0.103303, -0.25801)
bones/48/rotation = Quaternion(-5.89143e-08, 0.500546, 0.86571, -4.37768e-08)
bones/48/scale = Vector3(1, 1, 1)
bones/49/rotation = Quaternion(0.300165, 0.000217759, 6.85669e-05, 0.953887)
bones/49/scale = Vector3(1, 1, 1)
bones/50/rotation = Quaternion(0.316251, -0.000634177, -6.69744e-05, 0.948675)
bones/50/scale = Vector3(1, 1, 1)
bones/51/position = Vector3(-1.44137e-08, 0.0803044, -1.63127e-08)
bones/53/position = Vector3(-0.0166977, -0.00696267, -0.0324178)
bones/56/position = Vector3(0.0125396, -0.0241038, -0.0196853)
bones/56/rotation = Quaternion(0.236589, 0.96834, 0.0790532, -0.00970204)
bones/59/position = Vector3(7.31151e-08, 0.0261336, -0.0125594)
bones/59/rotation = Quaternion(-6.06265e-07, 0.996619, 0.0821632, -7.52438e-08)
bones/62/position = Vector3(0.0125396, -0.0241038, -0.0196853)
bones/62/rotation = Quaternion(0.236589, 0.96834, 0.0790507, -0.00970272)
bones/69/position = Vector3(0.0125396, -0.0241038, -0.0196853)
bones/69/rotation = Quaternion(0.236589, 0.96834, 0.0790532, -0.00970204)
bones/72/position = Vector3(7.31151e-08, 0.0261336, -0.0125594)
bones/72/rotation = Quaternion(-6.06265e-07, 0.996619, 0.0821604, -7.52426e-08)
bones/79/position = Vector3(7.31151e-08, 0.0261336, -0.0125594)
bones/79/rotation = Quaternion(-6.06265e-07, 0.996619, 0.0821632, -7.52438e-08)
bones/82/position = Vector3(-0.0166977, -0.00696267, -0.0324178)
bones/89/position = Vector3(-0.0166977, -0.00696267, -0.0324178)
bones/92/position = Vector3(-0.0306067, -0.120689, -0.0094063)
bones/92/rotation = Quaternion(0.997171, 0.0278243, -0.00488478, -0.069657)
bones/94/position = Vector3(-0.0306067, -0.120689, -0.0094063)
bones/94/rotation = Quaternion(0.997171, 0.0278242, -0.00488492, -0.0696543)
bones/99/position = Vector3(-0.0306067, -0.120689, -0.0094063)
bones/99/rotation = Quaternion(0.997171, 0.0278243, -0.00488478, -0.069657)
bones/104/position = Vector3(0.0155314, 0.00162381, -0.0154456)
bones/107/position = Vector3(-1.45019e-08, 0.0401522, -1.10376e-07)
bones/107/rotation = Quaternion(-7.4506e-09, 0.000219226, -3.63804e-12, 1)
bones/109/scale = Vector3(1, 1, 1)
bones/111/rotation = Quaternion(1.34112e-07, -0.000325439, -6.42074e-09, 1)
bones/111/scale = Vector3(1, 1, 1)
bones/113/scale = Vector3(1, 1, 1)
bones/114/rotation = Quaternion(-2.04891e-07, 0.000111409, 2.07239e-08, 1)
bones/114/scale = Vector3(1, 1, 1)
bones/116/rotation = Quaternion(-6.4632e-08, 0.500546, 0.86571, -3.84657e-08)
bones/116/scale = Vector3(1, 1, 1)
bones/117/rotation = Quaternion(0.300165, 0.000217759, 6.85669e-05, 0.953887)
bones/117/scale = Vector3(1, 1, 1)
bones/118/rotation = Quaternion(0.316251, -0.000634172, -6.69681e-05, 0.948675)
bones/118/scale = Vector3(1, 1, 1)
bones/119/position = Vector3(1.53887e-08, 0.0803044, -1.34896e-08)
bones/121/position = Vector3(0.0486863, -0.00795953, -0.0168891)
bones/121/rotation = Quaternion(0.154058, 0.984697, 0.0809436, -0.00927999)
bones/124/position = Vector3(-0.028071, -0.0221472, -0.0350924)
bones/127/position = Vector3(-0.0155315, 0.0280901, -0.0279665)
bones/130/position = Vector3(-0.028071, -0.0221472, -0.0350924)
bones/137/position = Vector3(-0.028071, -0.0221472, -0.0350924)
bones/140/position = Vector3(-0.0155315, 0.0280901, -0.0279665)
bones/147/position = Vector3(-0.0155315, 0.0280901, -0.0279665)
bones/150/position = Vector3(0.0486863, -0.00795953, -0.0168891)
bones/150/rotation = Quaternion(0.154058, 0.984697, 0.0809409, -0.00928045)
bones/157/position = Vector3(0.0486863, -0.00795953, -0.0168891)
bones/157/rotation = Quaternion(0.154058, 0.984697, 0.0809436, -0.00927999)
bones/160/position = Vector3(0.0306067, -0.120689, -0.00940631)
bones/160/rotation = Quaternion(0.997171, -0.0278241, 0.0048848, -0.069657)
bones/162/position = Vector3(0.0306067, -0.120689, -0.00940631)
bones/162/rotation = Quaternion(0.997171, -0.0278242, 0.00488499, -0.0696543)
bones/167/position = Vector3(0.0306067, -0.120689, -0.00940631)
bones/167/rotation = Quaternion(0.997171, -0.0278241, 0.0048848, -0.069657)
bones/172/position = Vector3(-0.0155314, 0.00162374, -0.0154455)
bones/175/position = Vector3(1.53004e-08, 0.0401522, -1.07553e-07)
bones/175/rotation = Quaternion(-1.49012e-08, 0.00021553, -3.63805e-12, 1)
bones/175/scale = Vector3(1, 1, 1.00002)
bones/177/scale = Vector3(1, 1, 1)
bones/179/rotation = Quaternion(1.41561e-07, -0.000325438, 1.0068e-09, 1)
bones/179/scale = Vector3(1, 1, 1)
bones/181/scale = Vector3(1, 1, 1)
bones/182/rotation = Quaternion(-2.08616e-07, 0.000111411, -9.5342e-10, 1)
bones/182/scale = Vector3(1, 1, 1)
bones/185/rotation = Quaternion(0.98904, 0, 0, -0.147646)
bones/186/rotation = Quaternion(4.70261e-08, 0.782317, -0.62288, -5.90633e-08)
bones/190/rotation = Quaternion(-5.52733e-08, -0.681178, 0.732118, 5.14275e-08)
bones/191/rotation = Quaternion(-0.148458, -1.30593e-09, -1.37176e-08, 0.988919)
bones/191/scale = Vector3(1, 1, 1)
bones/192/rotation = Quaternion(0.300165, 0.000217759, 6.85669e-05, 0.953887)
bones/192/scale = Vector3(1, 1, 1)
bones/193/rotation = Quaternion(-5.80657e-08, 0.500545, 0.86571, -5.04047e-08)
bones/195/rotation = Quaternion(-6.53593e-08, 0.500545, 0.86571, -3.77901e-08)
bones/195/scale = Vector3(1, 1, 1)
bones/196/rotation = Quaternion(-1.49012e-08, -5.44089e-08, 2.91426e-08, 1)
bones/197/rotation = Quaternion(0.300165, 0.000217803, 6.85317e-05, 0.953887)
bones/197/scale = Vector3(1, 1, 1)
bones/198/rotation = Quaternion(-4.4702e-08, 2.54477e-09, -6.48617e-09, 1)
bones/199/rotation = Quaternion(0.316252, -0.000634177, -6.69676e-05, 0.948675)
bones/199/scale = Vector3(1, 1, 1)
bones/200/rotation = Quaternion(1.56462e-07, -1.20054e-10, -2.02169e-10, 1)
bones/200/scale = Vector3(1, 1, 1.00001)
bones/201/rotation = Quaternion(0.217615, 0.000433108, -9.49698e-05, 0.976035)
bones/201/scale = Vector3(1, 0.999998, 1.00002)
bones/203/rotation = Quaternion(0.98904, 0, 0, -0.147646)
bones/204/rotation = Quaternion(4.70261e-08, 0.782317, -0.62288, -5.90633e-08)
bones/208/rotation = Quaternion(-5.52733e-08, -0.681178, 0.732118, 5.14275e-08)
bones/209/rotation = Quaternion(-0.148458, -1.47385e-10, -2.1435e-08, 0.988919)
bones/209/scale = Vector3(1, 1, 1)
bones/210/rotation = Quaternion(0.300165, 0.000217759, 6.85669e-05, 0.953887)
bones/210/scale = Vector3(1, 1, 1)
bones/211/rotation = Quaternion(-6.53593e-08, 0.500545, 0.86571, -3.77901e-08)
bones/213/rotation = Quaternion(-6.53593e-08, 0.500545, 0.86571, -3.77901e-08)
bones/213/scale = Vector3(1, 1, 1)
bones/214/rotation = Quaternion(-1.49012e-08, -4.99759e-08, -4.3409e-16, 1)
bones/215/rotation = Quaternion(0.300165, 0.000217807, 6.8553e-05, 0.953887)
bones/215/scale = Vector3(1, 1, 1)
bones/216/rotation = Quaternion(-4.47037e-08, 3.72347e-09, 9.42584e-10, 1)
bones/217/rotation = Quaternion(0.316252, -0.000634176, -6.6968e-05, 0.948675)
bones/217/scale = Vector3(1, 1, 1)
bones/218/rotation = Quaternion(1.56462e-07, -1.20054e-10, -2.02169e-10, 1)
bones/218/scale = Vector3(1, 1, 1.00001)
bones/219/rotation = Quaternion(0.217615, 0.000425979, -9.65592e-05, 0.976035)
bones/219/scale = Vector3(1, 0.999997, 1.00002)
bones/220/rotation = Quaternion(0.98904, 0, 0, -0.147646)
bones/225/position = Vector3(-0.0506063, 0.60669, 0.201174)
bones/225/rotation = Quaternion(0.606685, 0.403696, 0.142809, 0.669752)
bones/226/rotation = Quaternion(0.0403251, 0.000175991, -0.00436043, 0.999177)
bones/227/rotation = Quaternion(-0.0269711, -7.03065e-05, 0.00611433, 0.999618)
bones/228/rotation = Quaternion(-0.199679, -0.203778, -0.08799, 0.95439)
bones/232/rotation = Quaternion(-0.199679, -0.203778, -0.08799, 0.95439)
bones/234/rotation = Quaternion(-0.0972621, -0.233535, -0.450234, 0.856324)
bones/236/rotation = Quaternion(-0.0972621, -0.233535, -0.450234, 0.856324)
bones/240/rotation = Quaternion(0.606685, 0.403697, 0.142809, 0.669752)
bones/240/scale = Vector3(1, 1, 1)
bones/241/rotation = Quaternion(0.0403251, 0.000175929, -0.00436042, 0.999177)
bones/242/rotation = Quaternion(-0.0269711, -7.04067e-05, 0.00611433, 0.999618)
bones/247/position = Vector3(-0.0506063, 0.60669, 0.201174)
bones/247/rotation = Quaternion(0.606685, 0.403696, 0.142809, 0.669752)
bones/248/rotation = Quaternion(0.0403251, 0.000175991, -0.00436043, 0.999177)
bones/249/rotation = Quaternion(-0.0269711, -7.03065e-05, 0.00611433, 0.999618)
bones/252/rotation = Quaternion(0.606685, -0.403696, -0.142809, 0.669752)
bones/252/scale = Vector3(1, 1, 1)
bones/253/rotation = Quaternion(0.0403251, -0.000175991, 0.00436044, 0.999177)
bones/254/rotation = Quaternion(-0.0269711, 7.0433e-05, -0.00611434, 0.999618)
bones/255/rotation = Quaternion(-0.199679, 0.203778, 0.08799, 0.95439)
bones/259/rotation = Quaternion(-0.199679, 0.203778, 0.08799, 0.95439)
bones/261/rotation = Quaternion(-0.0972621, 0.233535, 0.450234, 0.856324)
bones/263/rotation = Quaternion(-0.0972621, 0.233535, 0.450234, 0.856324)
bones/267/rotation = Quaternion(0.606685, -0.403697, -0.142809, 0.669752)
bones/267/scale = Vector3(1, 1, 1)
bones/268/rotation = Quaternion(0.0403251, -0.000175929, 0.00436042, 0.999177)
bones/269/rotation = Quaternion(-0.0269711, 7.05265e-05, -0.00611433, 0.999618)
bones/274/rotation = Quaternion(0.606685, -0.403696, -0.142809, 0.669752)
bones/274/scale = Vector3(1, 1, 1)
bones/275/rotation = Quaternion(0.0403251, -0.000175991, 0.00436044, 0.999177)
bones/276/rotation = Quaternion(-0.0269711, 7.0433e-05, -0.00611434, 0.999618)
bones/280/rotation = Quaternion(0.930439, 0, 0, -0.366446)
bones/282/position = Vector3(0, 0.321029, 0)
bones/282/rotation = Quaternion(-0.0454699, 4.99483e-05, -2.2735e-06, 0.998966)
bones/282/scale = Vector3(1, 1, 1)
bones/283/rotation = Quaternion(-0.060446, 1.9229e-11, -6.04459e-06, 0.998172)
bones/283/scale = Vector3(1, 1, 1)
bones/284/rotation = Quaternion(0.206446, -4.89228e-05, 1.03223e-05, 0.978458)
bones/284/scale = Vector3(1, 1, 1)
bones/285/rotation = Quaternion(0.442964, 4.48261e-05, 2.21532e-05, 0.896539)
bones/285/scale = Vector3(1.01924, 0.962611, 1.01924)
bones/286/rotation = Quaternion(0.013886, -2.80852e-09, 1.38759e-06, 0.999904)
bones/286/scale = Vector3(0.981127, 1.0388, 0.981173)
bones/287/rotation = Quaternion(0.438938, 4.4927e-05, 2.19475e-05, 0.898517)
bones/288/rotation = Quaternion(0.0475321, -1.32313e-09, 4.75327e-06, 0.99887)
bones/289/rotation = Quaternion(0.996168, 0.082386, 0.0160582, -0.0245826)
bones/291/rotation = Quaternion(0.996168, -0.082386, -0.0160582, -0.0245826)
bones/298/position = Vector3(-8.91723e-06, 0.207561, 0.0891566)
bones/302/rotation = Quaternion(0.442964, 4.48261e-05, 2.21532e-05, 0.896539)
bones/302/scale = Vector3(1.01924, 0.962611, 1.01924)
bones/303/rotation = Quaternion(0.013886, -2.80852e-09, 1.38759e-06, 0.999904)
bones/303/scale = Vector3(0.981127, 1.0388, 0.981173)
bones/304/rotation = Quaternion(0.438938, 4.49282e-05, 2.19481e-05, 0.898517)
bones/305/rotation = Quaternion(0.047532, -2.65075e-09, 4.75333e-06, 0.99887)
bones/309/rotation = Quaternion(0.438938, 4.4927e-05, 2.19475e-05, 0.898517)
bones/310/rotation = Quaternion(0.0475321, -1.32313e-09, 4.75327e-06, 0.99887)
bones/311/rotation = Quaternion(0.996168, 0.082386, 0.0160582, -0.0245826)
bones/312/rotation = Quaternion(0.996168, -0.082386, -0.0160582, -0.0245826)
bones/313/rotation = Quaternion(0.874872, 0, 0, -0.484355)
bones/314/position = Vector3(-0.00576029, 0.189623, 0.111754)
bones/315/rotation = Quaternion(-0.837478, -2.73236e-05, -4.18739e-05, 0.546471)
bones/316/position = Vector3(0, 2.93415e-08, 2.06123e-08)
bones/316/rotation = Quaternion(0.919632, 3.33083e-11, 7.79861e-11, 0.39278)
bones/318/rotation = Quaternion(0.299771, -1.01234e-08, -0.0358804, 0.953336)
bones/318/scale = Vector3(1.22989, 0.661098, 1.22989)
bones/319/rotation = Quaternion(-2.23517e-08, -2.72848e-12, 5.59987e-12, 1)
bones/319/scale = Vector3(1, 1, 1)
bones/324/position = Vector3(0.213361, -0.138049, 0.578509)
bones/325/position = Vector3(0, 1.43887, 0.459016)
bones/325/rotation = Quaternion(0.867909, 1.92714e-16, -9.21041e-24, 0.496724)
bones/327/rotation = Quaternion(1, 6.64126e-11, -0.000880198, -7.45064e-09)
bones/329/position = Vector3(0.213361, 0.491162, -1.15702)
bones/329/rotation = Quaternion(-0.707107, 0, 0, 0.707107)
bones/331/position = Vector3(-0.213361, -0.138049, 0.578509)
bones/332/position = Vector3(0, 1.43887, 0.459016)
bones/332/rotation = Quaternion(0.867909, -1.92714e-16, 9.21041e-24, 0.496724)
bones/334/rotation = Quaternion(1, 6.64126e-11, -0.000880198, -7.45064e-09)
bones/335/rotation = Quaternion(3.64677e-06, -0.0523452, 0.998629, -1.9115e-07)
bones/336/position = Vector3(-0.213361, 0.491162, -1.15702)
bones/336/rotation = Quaternion(-0.707107, 0, 0, 0.707107)

[node name="BeakAttachment" type="BoneAttachment3D" parent="rig/Skeleton3D" index="1"]
transform = Transform3D(0.903167, 0.0926831, 0.419164, 0.365758, 0.345044, -0.864388, -0.224744, 0.933999, 0.277733, 0.083243, 1.13061, 0.522718)
bone_name = "DEF-spine.006"
bone_idx = 4

[node name="SvrakaRevolver" parent="rig/Skeleton3D/BeakAttachment" instance=ExtResource("3_uslka")]
transform = Transform3D(-3.71394, -0.728232, 1.29473, 0.125069, 3.32069, 2.2265, -1.48021, 2.10776, -3.06045, -0.183612, 1.27996, 0.0823112)

[node name="Crystals" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.49534, 0)
script = ExtResource("4_hv0ny")
crystal_scene = ExtResource("5_08fur")

[node name="ShotQueueLineRenderer" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
top_level = true
mesh = SubResource("ImmediateMesh_uslka")
script = ExtResource("5_uslka")
metadata/_custom_type_script = "uid://bgcqn6tjnhu6h"

[connection signal="all_crystals_destroyed" from="Crystals" to="." method="_on_crystals_all_crystals_destroyed"]

[editable path="rig"]
